Fixed some layout issues and added deployment configuration.

--- a/content/css/layout.less
+++ b/content/css/layout.less
@@ -43,6 +43,7 @@
 	float: left;
 	width: 15em;
 	padding-top: 1em;
+	padding-bottom: 1em;
 
 	padding-right: 1em;
 	border-right: 1px solid @color_border;
